--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@material-ui/lab": "4.0.0-alpha.57",
     "axios": "^0.21.1",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-switch": "^6.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "save-dev": "0.0.1-security"
