--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-switch": "^6.0.0",
+    "react-toastify": "^7.0.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
-    "save-dev": "0.0.1-security"
+    "save-dev": "0.0.1-security",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
